opam-version: "2.0"
synopsis: "A trace for benchmarks"
description: "A longer description"
version: "0.1"
maintainer: ["icristescu@tarides.com"]
authors: ["Ioana Cristescu"]
license: "ISC"
homepage: "https://github.com/icristescu/dataset"
bug-reports: "https://github.com/icristescu/dataset/issues"
depends: [
  "dune" {>= "2.0" }
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/icristescu/dataset.git"
